revise url of GitHub

--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -4,7 +4,7 @@
     "packageVersion": "0.0.0",
     "useSass": true,
     "deployToGithubPages": true,
-    "githubUsername": "zacky1972",
+    "githubUsername": "zackylab",
     "githubRepository": "research-introduction-2018"
   }
 }
